src/index.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
body {
	background: rgb(0, 160, 0);
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
		"Helvetica Neue", sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

code {
	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
		monospace;
}

ul {
	list-style-type: none;
}

table,
th,
td {
	margin-top: 10px;
	border: 1px solid black;
	border-collapse: collapse;
}

th,
td {
	padding: 4px;
}
th {
	width: 40%;
}

td {
	width: 60%;
}

.logo {
	margin: auto;
	margin-top: 10%;
	width: 200px;
}

.nav-base {
	background: rgb(3, 45, 94);
	position: fixed;
	top: 0;
	left: 0;
	width: 20%;
	height: 100%;
	box-shadow: 0px 0px 17px rgb(43, 43, 43);
	text-align: center;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-items: center;
}

.nav-search {
	background: white;
	margin: auto;
	margin-top: 20%;
	padding: 7px;
	height: 35px;
	border: none;
	border-radius: 50px;
	display: flex;
	align-items: center;
	justify-content: center;
	box-shadow: 0px 0px 17px rgb(43, 43, 43);
}

.nav-search input {
	font-size: 1.1rem;
	width: 170px;
	margin: 0px 4px;
	border: none;
	outline: none;
}

.nav-search button {
	color: rgb(3, 45, 94);
	font-size: 1.1rem;
	display: flex;
	align-items: center;
	justify-content: center;
	border: none;
}

.nav-search button:hover {
	color: red;
	cursor: pointer;
}

.nav-buttons {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-items: center;
	margin-top: 10%;
}

.nav-buttons > *:not(:nth-last-child(2)) {
	color: white;
	font-size: 1.2rem;
	width: 90%;
	height: 40px;
	margin: 10px auto;
	border: none;
	border-radius: 10px;
	background: rgb(0, 140, 255);
	display: flex;
	justify-content: center;
	align-items: center;
	box-shadow: 0px 7px 17px rgb(43, 43, 43);
	cursor: pointer;
}

.nav-buttons label {
	font-size: 1.2rem;
	font-weight: bolder;
	color: rgb(0, 255, 0);
	margin-top: 7%;
}

.nav-buttons select {
	text-align: center;
}

.main-content {
	margin-left: 20%;
}

.main-content img {
	width: 200px;
	height: 100px;
	object-fit: cover;
}

.main-content ul {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
}

.main-content li {
	display: flex;
	flex-direction: column;
	text-align: center;
	align-items: center;
	width: 300px;
	margin: 10px 20px;
	padding: 10px 0px;
	border-radius: 10px;
	background-color: aqua;
	box-shadow: 0px 7px 15px rgb(78, 78, 78);
}

